--- a/src/source.css
+++ b/src/source.css
@@ -137,7 +137,7 @@
 .channel-1Shao0:has(.selected-26oxtA):hover {
   background-color: var(--indicator-selected-hover-background);
 }
-.channel-1Shao0:has(.selected-26oxtA) .closeButton-mupH76 svg {
+.channel-1Shao0:has(.selected-26oxtA) .linkButtonIcon-7rsZcu, .channel-1Shao0:has(.selected-26oxtA) .closeButton-mupH76 {
   color: var(--indicator-selected-border);
 }
 .channel-1Shao0:has(.highlighted-Q8Nll-) {
@@ -147,7 +147,7 @@
 .channel-1Shao0:has(.highlighted-Q8Nll-):hover {
   background-color: var(--indicator-unread-hover-background);
 }
-.channel-1Shao0:has(.highlighted-Q8Nll-) .closeButton-mupH76 svg {
+.channel-1Shao0:has(.highlighted-Q8Nll-) .linkButtonIcon-7rsZcu, .channel-1Shao0:has(.highlighted-Q8Nll-) .closeButton-mupH76 {
   color: var(--indicator-unread-border);
 }
 .channel-1Shao0 .interactive-26HRN_ {
