--- a/src/theme/private-messages.scss
+++ b/src/theme/private-messages.scss
@@ -13,7 +13,7 @@
         &:hover {
             background-color: var(--indicator-selected-hover-background);
         }
-        .closeButton-mupH76 svg {
+        .linkButtonIcon-7rsZcu, .closeButton-mupH76 {
             color: var(--indicator-selected-border);
         }
     }
@@ -23,8 +23,8 @@
         &:hover {
             background-color: var(--indicator-unread-hover-background);
         }
-        .closeButton-mupH76 svg {
-            color: var(--indicator-unread-border) ;
+        .linkButtonIcon-7rsZcu, .closeButton-mupH76 {
+            color: var(--indicator-unread-border);
         }
     }
     .interactive-26HRN_ {
