--- a/clients/modern-indicators.theme.css
+++ b/clients/modern-indicators.theme.css
@@ -1,11 +1,12 @@
 /**
  * @name Modern Indicators
  * @author LuckFire
- * @version 2.2.2
+ * @version 2.2.3
  * @description Updates Discord's indicators to feel more modern.
  * @source https://github.com/discord-extensions/modern-indicators
  * @invite vYdXbEzqDs
  * @authorId 399416615742996480
+ * @updateUrl https://discord-extensions.github.io/modern-indicators/clients/modern-indicators.theme.css
 */
 
 @import url('https://discord-extensions.github.io/modern-indicators/src/source.css');
