--- a/src/theme/channels.scss
+++ b/src/theme/channels.scss
@@ -1,4 +1,6 @@
-.containerDefault-YUSmu3 {
+.containerDefault-YUSmu3,
+.containerDragBefore-1s5Qg6,
+.containerDragAfter-3aBiOW {
     margin: 2px 0;
     border-radius: var(--indicator-rounding);
     border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
