--- a/clients/modern-indicators.user.css
+++ b/clients/modern-indicators.user.css
@@ -2,11 +2,184 @@
 	/* ==UserStyle==
 	@name Modern Indicators
 	@author LuckFire
-	@version 2.2.4
 	@description Updates Discord's indicators to feel more modern.
+	@version 2.2.5
 	@namespace https://github.com/discord-extensions/modern-indicators
-	==UserStyle==*/
+	@license MIT
+	==/UserStyle== */
 
-	@import url('https://discord-extensions.github.io/modern-indicators/src/source.css');
+	@import url("https://discord-extensions.github.io/modern-indicators/src/source.css");
 
+	:root {
+	  --indicator-border-size: 2px;
+	  --indicator-border-style: solid;
+	  --indicator-rounding: 0;
+	}
+	
+	.theme-light {
+	  --indicator-unread: var(--primary-900-hsl);
+	  --indicator-unread-mention: var(--red-430-hsl);
+	  --indicator-selected: var(--brand-500-hsl);
+	  --indicator-connected: var(--green-430-hsl);
+	}
+	
+	.theme-dark {
+	  --indicator-unread: var(--primary-130-hsl);
+	  --indicator-unread-mention: var(--red-400-hsl);
+	  --indicator-selected: var(--brand-500-hsl);
+	  --indicator-connected: var(--green-230-hsl);
+	}
+	
+	:root {
+	  --indicator-hover: var(--background-modifier-hover);
+	  --indicator-unread-border: hsla(var(--indicator-unread)/0.75);
+	  --indicator-unread-background: hsla(var(--indicator-unread)/0.05);
+	  --indicator-unread-hover-background: hsla(var(--indicator-unread)/0.10);
+	  --indicator-unread-mention-border: hsl(var(--indicator-unread-mention));
+	  --indicator-unread-mention-background: hsla(var(--indicator-unread-mention)/0.15);
+	  --indicator-unread-mention-hover-background: hsla(var(--indicator-unread-mention)/0.25);
+	  --indicator-selected-border: hsl(var(--indicator-selected));
+	  --indicator-selected-background: hsla(var(--indicator-selected)/0.15);
+	  --indicator-selected-hover-background: hsla(var(--indicator-selected)/0.25);
+	  --indicator-connected-border: hsl(var(--indicator-connected));
+	  --indicator-connected-background: hsla(var(--indicator-connected)/0.15);
+	  --indicator-connected-hover-background: hsla(var(--indicator-connected)/0.25);
+	}
+	
+	.containerDefault__3187b,
+	.containerDragBefore_fe91aa {
+	  margin: 2px 0;
+	  border-radius: var(--indicator-rounding);
+	  border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
+	}
+	.containerDefault__3187b .link__95dc0,
+	.containerDragBefore_fe91aa .link__95dc0 {
+	  background: transparent !important;
+	}
+	.containerDefault__3187b.wrapper__7bcde,
+	.containerDragBefore_fe91aa.wrapper__7bcde {
+	  padding-left: 8px;
+	}
+	.containerDefault__3187b:hover,
+	.containerDragBefore_fe91aa:hover {
+	  background-color: var(--indicator-hover);
+	}
+	.containerDefault__3187b:has(.modeSelected__487d6),
+	.containerDragBefore_fe91aa:has(.modeSelected__487d6) {
+	  border-left-color: var(--indicator-selected-border);
+	  background-color: var(--indicator-selected-background);
+	}
+	.containerDefault__3187b:has(.modeSelected__487d6):hover,
+	.containerDragBefore_fe91aa:has(.modeSelected__487d6):hover {
+	  background-color: var(--indicator-selected-hover-background);
+	}
+	.containerDefault__3187b:has(.modeSelected__487d6) .link__95dc0 svg,
+	.containerDragBefore_fe91aa:has(.modeSelected__487d6) .link__95dc0 svg {
+	  color: var(--indicator-selected-border);
+	}
+	.containerDefault__3187b:has(.modeUnread_f74c03),
+	.containerDragBefore_fe91aa:has(.modeUnread_f74c03) {
+	  border-left-color: var(--indicator-unread-border);
+	  background-color: var(--indicator-unread-background);
+	}
+	.containerDefault__3187b:has(.modeUnread_f74c03):hover,
+	.containerDragBefore_fe91aa:has(.modeUnread_f74c03):hover {
+	  background-color: var(--indicator-unread-hover-background);
+	}
+	.containerDefault__3187b:has(.modeUnread_f74c03) .unreadRelevant__44f9e,
+	.containerDragBefore_fe91aa:has(.modeUnread_f74c03) .unreadRelevant__44f9e {
+	  display: none;
+	}
+	.containerDefault__3187b:has(.modeUnread_f74c03) .link__95dc0 svg,
+	.containerDragBefore_fe91aa:has(.modeUnread_f74c03) .link__95dc0 svg {
+	  color: var(--indicator-unread-border);
+	}
+	.containerDefault__3187b:has(.mentionsBadge_c2f85b),
+	.containerDragBefore_fe91aa:has(.mentionsBadge_c2f85b) {
+	  border-left-color: var(--indicator-unread-mention-border);
+	  background-color: var(--indicator-unread-mention-background);
+	}
+	.containerDefault__3187b:has(.mentionsBadge_c2f85b):hover,
+	.containerDragBefore_fe91aa:has(.mentionsBadge_c2f85b):hover {
+	  background-color: var(--indicator-unread-mention-hover-background);
+	}
+	.containerDefault__3187b:has(.mentionsBadge_c2f85b) .link__95dc0 svg,
+	.containerDragBefore_fe91aa:has(.mentionsBadge_c2f85b) .link__95dc0 svg {
+	  color: var(--indicator-unread-mention-border);
+	}
+	.containerDefault__3187b:has(.modeConnected__1c02e),
+	.containerDragBefore_fe91aa:has(.modeConnected__1c02e) {
+	  border-left-color: var(--indicator-connected-border);
+	  background-color: var(--indicator-connected-background);
+	}
+	.containerDefault__3187b:has(.modeConnected__1c02e):hover,
+	.containerDragBefore_fe91aa:has(.modeConnected__1c02e):hover {
+	  background-color: var(--indicator-connected-hover-background);
+	}
+	.containerDefault__3187b:has(.modeConnected__1c02e) .link__95dc0 svg,
+	.containerDragBefore_fe91aa:has(.modeConnected__1c02e) .link__95dc0 svg {
+	  color: var(--indicator-connected-border);
+	}
+	
+	.container-1Bj0eq .spineBorder-1-F4s1 {
+	  left: 24px;
+	}
+	
+	.categoryItem_b1be5c {
+	  margin: 2px 0;
+	  padding-left: 8px;
+	  border-radius: var(--indicator-rounding);
+	  border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
+	}
+	.categoryItem_b1be5c:hover {
+	  background-color: var(--indicator-hover);
+	}
+	.categoryItem_b1be5c:hover .itemInner__9e755 {
+	  background-color: transparent;
+	}
+	.categoryItem_b1be5c.selected__9800b {
+	  border-left-color: var(--indicator-selected-border);
+	  color: var(--interactive-active);
+	  background-color: var(--indicator-selected-background);
+	}
+	.categoryItem_b1be5c.selected__9800b .itemInner__9e755 {
+	  background-color: transparent;
+	}
+	.categoryItem_b1be5c.selected__9800b svg {
+	  color: var(--indicator-selected-border);
+	}
+	
+	.channel_c21703 {
+	  max-width: unset;
+	  margin: 2px 0;
+	  padding: 0 0 0 8px;
+	  border-radius: var(--indicator-rounding);
+	  border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
+	}
+	.channel_c21703:hover {
+	  background-color: var(--indicator-hover);
+	}
+	.channel_c21703:has(.selected_d94cf9) {
+	  border-left-color: var(--indicator-selected-border);
+	  background-color: var(--indicator-selected-background);
+	}
+	.channel_c21703:has(.selected_d94cf9):hover {
+	  background-color: var(--indicator-selected-hover-background);
+	}
+	.channel_c21703:has(.selected_d94cf9) .linkButtonIcon__2f35b, .channel_c21703:has(.selected_d94cf9) .closeButton__8f1fd {
+	  color: var(--indicator-selected-border);
+	}
+	.channel_c21703:has(.highlighted__7bba7) {
+	  border-left-color: var(--indicator-unread-border);
+	  background-color: var(--indicator-unread-background);
+	}
+	.channel_c21703:has(.highlighted__7bba7):hover {
+	  background-color: var(--indicator-unread-hover-background);
+	}
+	.channel_c21703:has(.highlighted__7bba7) .linkButtonIcon__2f35b, .channel_c21703:has(.highlighted__7bba7) .closeButton__8f1fd {
+	  color: var(--indicator-unread-border);
+	}
+	.channel_c21703 .interactive__776ee {
+	  background: transparent;
+	}
 }
