--- a/src/theme/discovery.scss
+++ b/src/theme/discovery.scss
@@ -1,19 +1,19 @@
-.categoryItem_b1be5c {
+.categoryItem__0608f {
     margin: 2px 0;
     padding-left: 8px;
     border-radius: var(--indicator-rounding);
     border-left: var(--indicator-border-size) var(--indicator-border-style) transparent;
     &:hover {
         background-color: var(--indicator-hover);
-        .itemInner__9e755 {
+        .itemInner_eedb2b {
             background-color: transparent;
         }
     }
-    &.selected__9800b {
+    &.selected__7f4cb {
         border-left-color: var(--indicator-selected-border);
         color: var(--interactive-active);
         background-color: var(--indicator-selected-background);
-        .itemInner__9e755 {
+        .itemInner_eedb2b {
             background-color: transparent;
         }
         svg {
